# nes

./: .gitignore  Cargo.toml  README.md  load.sh  log  log_dk  run.sh  todo.md
audio/: Audio analysis.ipynb  freq.py  install.sh  testmusic.ca65  testmusic.nes
glium-nes/: .gitignore  Cargo.toml
glium-nes/src/: audio.rs  graphics.rs  main.rs  ui.rs
nesemu/: Cargo.toml
nesemu/src/: lib.rs  nes.rs
nesemu/src/apu/: filters.rs  memory.rs  mod.rs
nesemu/src/cpu/: addressing.rs  cpu.rs  instructions.rs  memory.rs  mod.rs
nesemu/src/graphic/: mod.rs
nesemu/src/joypad/: mod.rs
nesemu/src/mapper/: mmc3.rs  mod.rs  uxrom.rs
nesemu/src/ppu/: memory.rs  mod.rs  palette.rs
nesemu/src/rom/: mod.rs
nesemu/tests/: nestest.rs
scripts/: compare.py
sdl2-nes/: Cargo.toml
sdl2-nes/src/: main.rs
src/: cpu.rs  instructions.rs  lib.rs  main.rs  nes.rs
src/apu/: memory.rs
src/cpu/: addressing.rs  cpu.rs  instructions.rs  memory.rs  mod.rs
src/graphic/: mod.rs
src/joypad/: mod.rs
src/mapper/: mmc1.rs  mmc3.rs  mod.rs  nrom.rs  uxrom.rs
src/ppu/: memory.rs  mod.rs  palette.rs  register.rs
src/rom/: mod.rs
tests/: nestest.csv  nestest.rs
wasm-nes/: Cargo.toml
wasm-nes/src/: lib.rs
wasm-nes/www/: index.html  index.js  package-lock.json  package.json
