[package]
name = "glium-nes"
version = "0.1.0"
authors = ["Benoit Eudier <benoit.eudier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.25.1"
image = "*"

nesemu = { path = "../nesemu" }

tracing = "0.1.9"
tracing-attributes = "0.1.3"
tracing-subscriber = "0.1.3"
