[package]
name = "glium-nes"
version = "0.1.0"
authors = ["Benoit Eudier <benoit.eudier@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Graphics
glium = "0.25.1"
image = "*"
imgui = { version = "0.2"}
imgui-glium-renderer = { version = "0.2"} 
imgui-winit-support = { version = "0.2"}

# for sound
sdl2 = "0.32"
hound = "3.4"

# NES lib
nesemu = { path = "../nesemu" }

# logging
tracing = "0.1.9"
tracing-attributes = "0.1.3"
tracing-subscriber = "0.1.3"

# CLI
structopt = "0.3.2"

# error handling
snafu = "0.5"
