[package]
name = "nesemu"
version = "0.2.0"
authors = ["Benoit Eudier <benoit.eudier@gmail.com>"]
edition = "2018"

[dependencies]
log = { version = "0.4", features = ["release_max_level_warn"] }
env_logger = "0.6.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[profile.release]
debug = true
