[package]
name = "nesemu"
version = "0.2.0"
authors = ["Benoit Eudier <benoit.eudier@gmail.com>"]
edition = "2018"

[dependencies]
log = { version = "0.4", features = ["release_max_level_warn"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tracing = "0.1.9"

[profile.release]
debug = true
